# buildspeed

./: .gitignore  CMakeLists.txt  actionprinter.cpp  actionprinter.h  actiontest.cpp  coredefs.h  dbusdata.h  eventprinter.cpp  eventprinter.h  exporter.cpp  i-n-extractor.cpp  in-testserver.cpp  indicator-client.py  indicator-service.py  indicator-simple.xml  indicatoradaptor.cpp  indicatoradaptor.h  indicatorexporter.cpp  indicatorexporter.h  menuexporter.cpp  menuexporter.h  meson.build  nmaccesspoint.cpp  nmaccesspoint.xml  nmactiveconnection.cpp  nmactiveconnection.xml  nmconnsettings.cpp  nmconnsettings.h  nmconnsettings.xml  nmdevice.cpp  nmdevice.h  nmmodem.cpp  nmmodem.h  nmmodem.xml  nmroot.cpp  nmroot.h  nmroot.xml  nmsettings.cpp  nmsettings.h  nmsettings.xml  (+25 more)
pch/: dumper-pch.h
